--- a/atoms/theme/branding/_cake.scss
+++ b/atoms/theme/branding/_cake.scss
@@ -7,8 +7,8 @@
   --secondary-color--dark: #F4DF42;
   --secondary-color--light: #83cab9;
 
-  --primary-color-text: #ffffff;
-  --secondary-color-text: #000000;
+  --primary-color-text: #000000;
+  --secondary-color-text: #ffffff;
 
   --contrast-color: #ffbc79;
 }
